--- a/css/my-styles.css
+++ b/css/my-styles.css
@@ -1,90 +1,1 @@
-body {
-	background-color: #333;
-	padding-top: 7%;
-	color: white;
-	font-family: 'Raleway', sans-serif;
-}
-
-h1, h2, h3, h4 {
-	text-align: center;
-}
-
-h1 {
-	font-size: 250%;
-	color: white;
-}
-
-h2 {
-	font-size: 150%;
-	color: #EEE7E7;
-}
-
-.main-title {
-	letter-spacing: 2pt;
-}
-
-.text-xs {
-	font-size: 60%;
-}
-
-.bold {
-	font-weight: 600;
-}
-
-.light {
-	font-weight: 100;
-}
-
-.square {
-	border-color: white;
-	border-style: solid;
-	margin-bottom: 3%;
-	border-width: 2pt;
-	padding: 0pt;
-	margin: 0 auto;
-}
-
-.form {
-	margin-top: 2%;
-	text-align: center;
-	color: #EEE7E7;
-}
-
-.btn-danger {
-	position: relative;
-	margin-top: -3%;
-	font-weight: 700;
-	border-radius: 0pt;
-}
-
-.top-space-sm {
-	margin-top: 1%;
-}
-
-.top-space-md {
-	margin-top: 7%;
-}
-
-.content-col {
-	padding: 0pt;
-}
-
-.select {
-	border-radius: 0pt;
-	color: #EEE7E7;
-	background-color: #333;
-	border-color: #EEE7E7;
-}
-
-.select:focus,
-.select:active {
-	border-color: white;
-}
-
-.option {
-	border-color: #EEE7E7;
-}
-
-.option:hover {
-	background-color: #EEE7E7;
-}
+body,h1{color:#fff}.form,h1,h2,h3,h4{text-align:center}.select,body{background-color:#333}body{padding-top:7%;font-family:Raleway,sans-serif}.content-col,.square{padding:0}h1{font-size:250%}.form,.select,h2{color:#EEE7E7}h2{font-size:150%}.main-title{letter-spacing:2pt}.text-xs{font-size:60%}.bold{font-weight:600}.light{font-weight:100}.square{border-color:#fff;border-style:solid;border-width:2pt;margin:0 auto}.form{margin-top:2%}.btn-danger{position:relative;margin-top:-3%;font-weight:700;border-radius:0}.top-space-sm{margin-top:1%}.top-space-md{margin-top:7%}.select{border-radius:0;border-color:#EEE7E7}.select:active,.select:focus{border-color:#fff}.option{border-color:#EEE7E7}.option:hover{background-color:#EEE7E7}
