--- a/css/my-styles.css
+++ b/css/my-styles.css
@@ -1,9 +1,4 @@
 body {
-	background-image: url("../images/bk.jpg");
-	background-position: center center;
-	background-repeat: no-repeat;
-	background-attachment: fixed;
-	background-size: cover;
 	background-color: #272729;
 	padding-top: 8%;
 	font-family: 'Raleway', sans-serif;
@@ -80,34 +75,99 @@ h2 {
 	padding: 0pt;
 }
 
-.input,
-.select {
-	border-radius: 0pt;
+.input {
 	color: #FAF6F6;
 	border-color: #FAF6F6;
-}
-
-.input {
 	border-radius: 1pt;
 	background-color: transparent;
 	color: #FAF6F6;
 	border-color: #FAF6F6;
 }
 
-.select {
-	border-radius: 1pt;
-	color: #FAF6F6;
-	background-image: url("../images/bk.jpg");
-	background-position: center center;
-	background-repeat: no-repeat;
-	background-attachment: fixed;
-	background-size: cover;
-	background-color: #272729;
-	border-color: #FAF6F6;
+.select-box {
+    background: none repeat scroll 0 0 transparent;
+    border-radius: 2pt 2pt 0 0;
+    border: solid;
+    border-width: 1px;
+    border-color: #FAF6F6;
+    cursor: pointer;
+    position: relative;
+    z-index: 1;
+    padding: 0;
+    margin-right: -1px;
 }
 
-.select:focus,
-.select:active,
+.box-shadow {
+	animation-duration: 0.2s;
+	animation-timing-function: linear;
+	animation-name: iluminate;
+	animation-fill-mode: forwards;
+}
+
+
+ul.select {
+    background: none repeat scroll 0 0 #272729;
+    border: 1pt solid #FAF6F6;
+    margin-left: -1px;
+    margin-top: 26pt;
+    margin-right: 0;
+    padding-left: 0;
+    padding-right: 0;
+    position: absolute;
+    text-indent: 15px;
+    top: 0;
+    border-radius: 0 0 2pt 2pt;
+    text-align: left;
+    width: 101%;
+}
+
+ul.select li {
+	height: 23pt;
+	text-align: left;
+	list-style-type: none;
+	padding-left: 0px;
+	padding-right: 0px;
+	border-bottom-style: solid;
+	border-bottom-width: 1px;
+	border-bottom-color: rgba(250, 246, 246, 0.5);
+	color: rgba(250, 246, 246, 0.9);
+	
+}
+
+ul.select li:hover,
+.option-selected
+ {
+    color: white !important;
+    text-decoration: none;
+    background-color: #49494D;
+}
+
+.selected {
+    color: white;
+    display: block;
+    line-height: 3;
+    margin-bottom: -3pt;
+    margin-top: -3px;
+}
+
+.card-description {
+	padding-top: 3pt;
+}
+
+.option-icon-down {
+	animation-duration: 0.2s;
+	animation-timing-function: linear;
+	animation-name: triangle-down;
+	animation-fill-mode: forwards;
+}
+
+.option-icon-up {
+	animation-duration: 0.2s;
+	animation-timing-function: linear;
+	animation-name: triangle-up;
+	animation-fill-mode: forwards
+}
+
 .input:focus,
 .input:active {
 	border-color: white;
@@ -130,6 +190,79 @@ h2 {
 	animation-duration: 1s;
 	animation-timing-function: linear;
 	animation-name: show-up;
+}
+
+.card-icon {
+	width:30px;
+    height:30px;
+    border-radius:15px;
+}
+
+@keyframes iluminate {
+	from {
+
+		
+	}
+	to {
+		border-color: white;
+		-webkit-box-shadow: 0px 0px 180px 0px rgba(255,255,255,0.5);
+		-moz-box-shadow: 0px 0px 180px 0px rgba(255,255,255,0.5);
+		box-shadow: 0 0 7px 0px rgba(255,255,255,0.5);		
+	}
+}
+
+@keyframes triangle-down {
+	from {
+	    border-bottom: 7px solid #FAF6F6;
+	    border-left: 4px solid rgba(0, 0, 0, 0);
+	    border-right: 4px solid rgba(0, 0, 0, 0);
+	    height: 0;
+	    position: absolute;
+	    right: 10px;
+	    top: 15px;
+	    width: 0;
+	    margin: 0pt;
+	    padding: 0pt;
+	}
+	to {
+	    border-left: 4px solid rgba(0, 0, 0, 0);
+	    border-right: 4px solid rgba(0, 0, 0, 0);
+	    border-top: 7px solid #FAF6F6;
+	    height: 0;
+	    position: absolute;
+	    right: 10px;
+	    top: 15px;
+	    width: 0;
+	    margin: 0pt;
+	    padding: 0pt;
+	}
+}
+
+@keyframes triangle-up {
+	from {
+	    border-left: 4px solid rgba(0, 0, 0, 0);
+	    border-right: 4px solid rgba(0, 0, 0, 0);
+	    border-top: 7px solid #FAF6F6;
+	    height: 0;
+	    position: absolute;
+	    right: 10px;
+	    top: 15px;
+	    width: 0;
+	    margin: 0pt;
+	    padding: 0pt;
+	}
+	to {
+	    border-bottom: 7px solid #FAF6F6;
+	    border-left: 4px solid rgba(0, 0, 0, 0);
+	    border-right: 4px solid rgba(0, 0, 0, 0);
+	    height: 0;
+	    position: absolute;
+	    right: 10px;
+	    top: 15px;
+	    width: 0;
+	    margin: 0pt;
+	    padding: 0pt;
+	}
 }
 
 @keyframes show-up {
